# falsify

./: .dockerignore  .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEMO.md  HANDOFF.md  LAUNCH_PLAYBOOK.md  Makefile  NOTICE  README.md  ROADMAP.md  SECURITY.md  SUBMISSION.md  TUTORIAL.md  demo.sh  falsify.py  falsify_prml.py  pyproject.toml
.claude/agents/: verdict-refresher.md
.claude/skills/claim-audit/: SKILL.md
.claude/skills/claim-review/: SKILL.md
.github/: SECURITY.md
.github/ISSUE_TEMPLATE/: rfc-v0.2-comment.md
.github/actions/falsify-verify/: action.yml
.github/workflows/: conformance.yml  falsify.yml  multi-lang-conformance.yml  prml-verify.yml  release.yml  scorecard.yml
.wrangler/cache/: pages.json  wrangler-account.json
docs/: COMMERCIAL.md  DEMO_SCRIPT.md  DEMO_SHOT_LIST.md  EMBED.md  EXAMPLES.md  PITCH.md
examples/: embed_host.py
examples/calibration_sample/: README.md  data.csv  metric.py  spec.yaml
examples/hello_claim/: README.md
examples/humaneval-walkthrough/: README.md
impl/go/: README.md  falsify.go
impl/js/: README.md  falsify.js
impl/rust/: README.md
impl/rust/src/: main.rs
paper/joss/: paper.bib  paper.md
scripts/: record_demo.sh
spec/: 404.html  MIGRATION-v0.1-to-v0.2.md  PRML-v0.1.md  PRML-v0.2-RFC.md  _redirects  index.html  paper-outline.md  robots.txt  sitemap.xml
spec/analysis/: canonicalization-portability-v0.1.md  positioning-v0.1.md  scoring-methodology-v0.1.md
spec/article-12-readiness/: index.html
spec/compliance/: AI-Act-mapping-v0.1.md  landing.md
spec/demo/: index.html
spec/editor/: index.html
spec/eu-ai-act/article-12/: index.html
spec/iso-42001/: index.html
spec/nist-ai-rmf/: index.html
spec/paper/: PRML-V0.2-PAPER-OUTLINE.md  README.md  prml-v0.1-preprint.tex  prml-v0.2-preprint.tex
spec/pre-registration/: index.html
spec/reproducibility/eval-audit/: index.html
spec/schema/: index.html  prml-v0.1.schema.json  prml-v0.2.schema.json
spec/test-vectors/reject/: README.md  check_reject.py  reject-vectors.json
spec/test-vectors/v0.1/: CONFORMANCE.md  conform.py  generate.py  reference-target.py  test-vectors.json  test-vectors.md
spec/test-vectors/v0.2/: generate.py  test-vectors.json
spec/v0.2/: ROADMAP.md  generate-candidates.py
spec/v0.2-rfc/: PRML-v0.2-RFC.md  index.html
spec/v0.3-backlog/: 01-claim-tree.md  02-producer-struct.md  03-tolerance.md  README.md
tests/: test_attest.py  test_calibration_sample.py  test_ci_workflow.py  test_demo_script.py  test_embed_example.py  test_prml_cli.py  test_prml_vectors.py  test_pyproject.py  test_readme.py  test_reject_vectors.py  test_version.py
tools/: registry_hash.py
