[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "falsify"
version = "0.1.4"
description = "Pre-registration and CI for AI-agent claims — deterministic PASS or FAIL."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Cüneyt Öztürk" }]
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
]
keywords = ["falsifiability", "pre-registration", "AI", "CI", "claude", "hackathon"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://falsify.dev"
Repository = "https://github.com/studio-11-co/falsify"
Issues = "https://github.com/studio-11-co/falsify/issues"
Changelog = "https://github.com/studio-11-co/falsify/blob/main/CHANGELOG.md"

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]

[project.scripts]
falsify = "falsify:main"

[tool.setuptools]
py-modules = ["falsify"]
packages = ["mcp_server"]
